<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sut">SAT</string>
    <string name="save">Save</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="absence">Absence</string>
    <string name="no_date_selected">No date selected…</string>
    <string name="set_dates">Set dates</string>
</resources>